Project_Disability/www/css/manu_style.css
* {box-sizing: border-box;}

html, body {
    font-family: "Lato", sans-serif;
    height: 100%;
    margin: 0;
    padding: 0;
}

#map {
    height: 95%;
}

#hamburger {
  margin-left: 10px;
}

.topnav {
    overflow: hidden;
    background-color: #e9e9e9;
}

.topnav .search-container {
    float: right;
}

.topnav input[type=text] {
    padding: 6px;
    border: none;
    margin-top: 8px;
    margin-bottom: 8px;
    font-size: 17px;
}

.topnav .search-container button {
    float: right;
    padding: 6px 10px;
    margin-top: 8px;
    margin-bottom: 8px;
    margin-right: 16px;
    background: #ddd;
    font-size: 17px;
    border: none;
    cursor: pointer;
}

.topnav .search-container button:hover {
    background: #ccc;
}

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 3;
    top: 0;
    left: 0;
    background-color: darkblue;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: white;
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

#overlay {
  position: fixed;
  display: none;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5);
  z-index: 2;
  cursor: pointer;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

